--- a/src/assets/css/light-bootstrap-dashboard.css
+++ b/src/assets/css/light-bootstrap-dashboard.css
@@ -14,6 +14,27 @@
  
 /*      light colors         */
 
+/* Navbar link colors */
+a.navbar-brand,a.nav-link{
+    color:#f7f7f7 !important;
+}
+
+/* Adjust background colors */
+body,footer,nav.navbar.navbar-expand-lg,navbar navbar-expand-lg{
+    background:#181a1c !important;
+}
+
+div.content{
+    color:#191a1c !important;
+}
+
+/*Adjust Chart palette */
+
+
+
+
+
+
 @keyframes spin {
     from {
         transform: rotate(0deg);
@@ -295,7 +316,10 @@ input:focus {
 }
 
 .page-header .title-container {
+    /*
     color: #fff;
+    */
+    color: #181a1b;
     position: relative;
     top: 250px;
     z-index: 3;
@@ -579,12 +603,13 @@ body>.navbar-collapse:before {
 .sidebar:before,
 body>.navbar-collapse:before {
     opacity: .33;
-    background: #000000;
+    background: #2e106c
 }
 
 .sidebar:after,
 body>.navbar-collapse:after {
-    background: #9368E9;
+    background:#2e106c;
+    /*
     background: -moz-linear-gradient(top, #9368E9 0%, #943bea 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #9368E9), color-stop(100%, #943bea));
     background: -webkit-linear-gradient(top, #9368E9 0%, #943bea 100%);
@@ -594,6 +619,7 @@ body>.navbar-collapse:after {
     background-size: 150% 150%;
     z-index: 3;
     opacity: 1;
+    */
 }
 
 .sidebar[data-image]:after,
